--- a/inst/templates/head.html
+++ b/inst/templates/head.html
@@ -2,6 +2,8 @@
 <title>{{pagetitle}}. {{#package}}{{package}} {{version}}{{/package}}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="{{author}}">
+<meta name="keywords" content="{{package}} R package">
+<meta name="description" content="This is the decumentation of the R package {{package}}.">
 
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/bootstrap-responsive.css" rel="stylesheet">
